# normify

./: .gitignore  Cargo.toml  README.md
src/: database_builder.rs  dtype.rs  error.rs  inspect.json  lib.rs  main.rs  normalizer.rs  normalizer_copy.rs  options.txt
tests/: test.rs  test_file.json
