[package]
name = "rust_lobbying_analysis"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
indexmap = "2.12.0"
polars = {version = "0.51.0"}
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v4"] }
